# finviz

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST  README.md  README.rst  example.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py
finviz/: __init__.py  async_connector.py  config.py  error_handling.py  filters.json  finviz.py  main_func.py  portfolio.py  public.py  request_functions.py  save_data.py  scraper_functions.py  screener.py  table_format.py  test.py
finviz/helper_functions/: display_functions.py  error_handling.py  request_functions.py  save_data.py  scraper_functions.py
finviz/tests/: conftest.py  test_crypto.py  test_integration.py  test_screener.py  test_stock.py
