[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finviz"
version = "2.0.0"
description = "Unofficial Python API for FinViz - retrieve stock data, screener results, and financial information"
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Mario Stoev", email = "mariostoev@users.noreply.github.com"},
]
maintainers = [
    {name = "Mario Stoev", email = "mariostoev@users.noreply.github.com"},
]
keywords = ["finviz", "finance", "stocks", "screener", "trading", "investing", "data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "lxml>=4.9.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "cssselect>=1.2.0",
    "user_agent>=0.1.10",
    "beautifulsoup4>=4.11.0",
    "tqdm>=4.64.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
    "responses>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/mariostoev/finviz"
Documentation = "https://github.com/mariostoev/finviz#readme"
Repository = "https://github.com/mariostoev/finviz.git"
Issues = "https://github.com/mariostoev/finviz/issues"
Changelog = "https://github.com/mariostoev/finviz/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["finviz*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["finviz"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["finviz/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
